# messenger_server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  chat.db  docker-compose.yml  index.html
deploy/: .env.prod.example  Caddyfile  RUNBOOK.md  docker-compose.caddy.yml  docker-compose.prod.yml  messenger.service  nginx.conf
src/: config.rs  db.rs  error.rs  main.rs  models.rs  routes.rs  state.rs  websocket.rs
static/: app.js  index.html  style.css
